130924-M2 [post processing + param,eter parser]