@@ -10,9 +10,12 @@ import static java.util.stream.Stream.of;
 public class SyntaxErrorException extends Error {
 
     public SyntaxErrorException(Parser parser, Token.Entry entry, Token... expected) {
-        this(String.format("Parser [%s] was expected: %s but got %s at position %d",
-                parser.getClass().getSimpleName(), of(expected).map(Objects::toString).collect(Collectors.joining(", ")),
-                entry.token(), entry.position()));
+        this("[%s] expected token %s, but encountered %s at position %d".formatted(
+                parser.getClass().getSimpleName(),
+                of(expected).map(Objects::toString).collect(Collectors.joining(", ")),
+                entry.token(),
+                entry.position())
+        );
     }
 
     public SyntaxErrorException(String message) {
